fixed blog post image alignment

--- a/src/pages/SinglePost.css
+++ b/src/pages/SinglePost.css
@@ -9,6 +9,10 @@
 
 .SinglePost-header {
   margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .SinglePost-image {
